fixed overflow

--- a/src/shared/routes/Location/index.css
+++ b/src/shared/routes/Location/index.css
@@ -200,7 +200,7 @@
         margin: 0 !important;
     }
 
-    .locations-page header .container:before {
+    .book-dj-location header .container:before {
         display: none;
     }
 
